# deepin-appstore

./: AboutWindow.cpp  AboutWindow.h  Bridge.cpp  Bridge.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Shell.cpp  Shell.h  StupidWindow.cpp  StupidWindow.h  WebWidget.h  main.cpp  res.qrc  xutil.cpp  xutil.h
CEFView/: browser_handler.cc  browser_handler.h  cef_init.cc  cef_init.h  renderer_handler.cc  renderer_handler.h  webchannel_transport.cc  webchannel_transport.h  webview.cpp  webview.h
debian/: control  deepin-appstore.install  rules
qcef/: web_view.cpp  web_view.h
src/ui/channel/: menu_proxy.cpp  menu_proxy.h
src/ui/widgets/: title_bar.cpp  title_bar.h  title_bar_menu.cpp  title_bar_menu.h
support/: deepin-appstore.desktop
